objects/UPS_related_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>UPS related Accounts</relationshipLabel>
        <relationshipName>UPS_related_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAN__c</fullName>
        <label>CAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gold_ID__c</fullName>
        <label>Gold ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Date__c</fullName>
        <label>Process Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Realm__c</fullName>
        <label>Realm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Accounts_Response__c</fullName>
        <label>Related Accounts Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SF_Serialized_Related_Account__c</fullName>
        <label>SF Serialized Related Account</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>